--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="app">
         <h1>Notes</h1>
+        <input type="text" id="note-title" placeholder="Enter note title..." />
         <input type="text" id="note-input" placeholder="Write a new note..." />
         <button id="add-note">Add Note</button>
         <ul id="notes-list"></ul>
